--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lock Your Money</title>
+    <script src="https://getlaunchlist.com/js/widget.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
