--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -2,11 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/image.png" />
+    <link rel="icon" href="/public/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lock Your Money</title>
+    <meta name="description" content="Lock Your Money is a digital piggy bank that helps students stop impulsive spending and save smarter." />
+    <link rel="canonical" href="https://lockyourmoney.online/" />
+    
+    <meta property="og:title" content="Lock Your Money" />
+    <meta property="og:description" content="Stop overspending. Lock your money and build better habits." />
+    <meta property="og:image" content="https://lockyourmoney.online/preview.png" />
+    <meta property="og:url" content="https://lockyourmoney.online" />
+    <meta property="og:type" content="website" />
+  
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lock Your Money" />
+    <meta name="twitter:description" content="Stop overspending. Lock your money and build better habits." />
+    <meta name="twitter:image" content="https://lockyourmoney.online/preview.png" />
+  
     <script src="https://getlaunchlist.com/js/widget.js" defer></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Lock Your Money",
+      "url": "https://lockyourmoney.online",
+      "description": "A digital piggy bank to help students build smarter money habits.",
+      "applicationCategory": "FinanceApplication"
+    }
+    </script>
+    <title>Lock Your Money | Digital Piggy Bank for Students</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
