more seo improvements

--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/image.png" />
+    <link rel="icon" href="/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Lock Your Money is a digital piggy bank that helps students stop impulsive spending and save smarter." />
+    <meta name="description" content="Lock Your Money is a digital piggy bank and student budgeting app that helps students stop impulsive spending, save smarter, and build lasting financial habits." />
     <link rel="canonical" href="https://lockyourmoney.online/" />
-    
-    <meta property="og:title" content="Lock Your Money" />
-    <meta property="og:description" content="Stop overspending. Lock your money and build better habits." />
+
+    <meta property="og:title" content="Lock Your Money | Digital Piggy Bank & Student Budgeting App" />
+    <meta property="og:description" content="Stop impulsive spending and save smarter with Lock Your Money, the digital piggy bank designed for students to build better money habits." />
     <meta property="og:image" content="https://lockyourmoney.online/preview.png" />
     <meta property="og:url" content="https://lockyourmoney.online" />
     <meta property="og:type" content="website" />
-  
+
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Lock Your Money" />
-    <meta name="twitter:description" content="Stop overspending. Lock your money and build better habits." />
+    <meta name="twitter:title" content="Lock Your Money | Digital Piggy Bank for Students" />
+    <meta name="twitter:description" content="Stop overspending. Lock your money and build better habits with this smart student budgeting tool." />
     <meta name="twitter:image" content="https://lockyourmoney.online/preview.png" />
-  
+
     <script src="https://getlaunchlist.com/js/widget.js" defer></script>
     <script type="application/ld+json">
     {
@@ -25,15 +25,80 @@
       "@type": "WebApplication",
       "name": "Lock Your Money",
       "url": "https://lockyourmoney.online",
-      "description": "A digital piggy bank to help students build smarter money habits.",
-      "applicationCategory": "FinanceApplication"
+      "description": "A digital piggy bank and student budgeting app to help students build smarter money habits and avoid impulsive spending.",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "Web platform",
+      "inLanguage": "en-US",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "audience": {
+        "@type": "Audience",
+        "audienceType": "Students",
+        "name": "Students"
+      }
     }
     </script>
-    <title>Lock Your Money | Digital Piggy Bank for Students</title>
+    <title>Lock Your Money | Digital Piggy Bank & Student Budgeting App</title>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <main>
+        <section id="hero">
+          <h1>Lock Your Money: Your Smart Digital Piggy Bank for Students</h1>
+          <p>Are you a student struggling with impulsive spending? Lock Your Money is the innovative **student budgeting app** that helps you take control of your finances, stop overspending, and build smart money habits for life.</p>
+          <img src="/hero-image.png" alt="Lock Your Money app interface showing locked funds" width="800" height="450">
+          <a href="#features" class="button-primary">Learn How It Works</a>
+        </section>
+
+        <section id="features">
+          <h2>How Lock Your Money Helps You Save Smarter</h2>
+          <div class="feature-grid">
+            <div class="feature-item">
+              <img src="/feature-lock.png" alt="Lock icon" width="60" height="60">
+              <h3>Lock Your Funds</h3>
+              <p>Designate funds for specific goals and set a lock period. Can't touch it until the time is up!</p>
+            </div>
+            <div class="feature-item">
+              <img src="/feature-no-impulse.png" alt="No impulse icon" width="60" height="60">
+              <h3>Curb Impulsive Spending</h3>
+              <p>Eliminate the temptation of instant gratification. Think twice before unlocking your savings.</p>
+            </div>
+            <div class="feature-item">
+              <img src="/feature-habits.png" alt="Good habits icon" width="60" height="60">
+              <h3>Build Lasting Habits</h3>
+              <p>Develop discipline and financial awareness that will serve you long after graduation.</p>
+            </div>
+            <div class="feature-item">
+              <img src="/feature-goals.png" alt="Goal setting icon" width="60" height="60">
+              <h3>Achieve Your Goals</h3>
+              <p>Whether it's for tuition, a new laptop, or a trip, Lock Your Money helps you reach your financial milestones.</p>
+            </div>
+          </div>
+        </section>
+
+        <section id="benefits">
+          <h2>Why Lock Your Money is Perfect for Students</h2>
+          <ul>
+            <li>**Simple & Intuitive:** Easy to use, even if you're new to budgeting.</li>
+            <li>**Focus on Discipline:** Directly addresses the challenge of **impulsive spending** common among students.</li>
+            <li>**Free to Use:** Get started saving without any upfront costs.</li>
+            <li>**Accessible Anywhere:** Manage your locked funds from any device.</li>
+          </ul>
+        </section>
+
+        <section id="cta">
+          <h2>Ready to Stop Overspending and Start Saving?</h2>
+          <p>Join thousands of students building a brighter financial future.</p>
+          <a href="#" class="button-secondary">Get Started Now!</a>
+          <p class="small-text">No credit card required. It's completely free!</p>
+        </section>
+      </main>
+      </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
