--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/image.png" />
+    <link rel="icon" href="/images/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Lock Your Money is a digital piggy bank that helps students stop impulsive spending and save smarter." />
     <link rel="canonical" href="https://lockyourmoney.online/" />
     
     <meta property="og:title" content="Lock Your Money" />
     <meta property="og:description" content="Stop overspending. Lock your money and build better habits." />
-    <meta property="og:image" content="https://lockyourmoney.online/preview.png" />
+    <meta property="og:image" content="https://lockyourmoney.online/images/preview.png" />
     <meta property="og:url" content="https://lockyourmoney.online" />
     <meta property="og:type" content="website" />
   
