twitter preview image fix

--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Lock Your Money" />
     <meta name="twitter:description" content="Stop overspending. Lock your money and build better habits." />
-    <meta name="twitter:image" content="https://lockyourmoney.online/preview.png" />
+    <meta name="twitter:image" content="https://lockyourmoney.online/images/preview.png" />
   
     <script src="https://getlaunchlist.com/js/widget.js" defer></script>
     <script type="application/ld+json">
