--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -9,15 +9,11 @@
   <link
     rel="preload"
     as="image"
-    href="/images/phoneMockup.webp"
-    imagesrcset="/images/phoneMockupMobile.webp 400w, /images/phoneMockupTablet.webp 800w, /images/phoneMockup.webp 1024w"
+    href="./src/assets/phoneMockup.webp"
+    imagesrcset="./src/assets/phoneMockupMobile.webp 400w, ./src/assets/phoneMockupTablet.webp 800w, ./src/assets/phoneMockup.webp 1024w"
     imagesizes="(max-width: 600px) 400px, (max-width: 1024px) 800px, 1024px"
     fetchpriority="high"
   />
-
-  <!-- ✅ Preload your main CSS (so it starts downloading asap) -->
-  <link rel="preload" as="style" href="/style.css" />
-  <link rel="stylesheet" href="/style.css" />
 
   <!-- Favicon -->
   <link rel="icon" href="/images/image.png" />
