--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -44,6 +44,7 @@
     "@context": "https://schema.org",
     "@type": "WebApplication",
     "name": "Lock Your Money",
+    "alternateName": "LockYourMoney",
     "url": "https://lockyourmoney.online",
     "description": "A digital piggy bank to help students build smarter money habits.",
     "applicationCategory": "FinanceApplication"
