--- a/frontend/landingPage/index.html
+++ b/frontend/landingPage/index.html
@@ -19,8 +19,8 @@
   <link rel="icon" href="/images/image.png" />
 
   <!-- SEO meta -->
-  <meta name="description" content="Lock Your Money is a digital piggy bank that helps students stop impulsive spending and save smarter." />
-  <meta name="keywords" content="digital piggy bank, student finance, money saving app, lock money, budgeting for students, save money online" />
+  <meta name="description" content="Lock Your Money is a digital piggy bank app designed for students. It helps prevent impulsive spending, build smarter money habits, and track savings to reach financial goals easily." />
+  <meta name="keywords" content="lock money, save money, budgeting, prevent overspending, expense manager, student finance, financial control, savings app, money management, lock savings, spending tracker, emergency fund, budget planner for students, how to save money, stop wasting money, personal finance, financial planning for beginners, money discipline, debt management, track savings, financial goals, income tracking, money habits, pocket money management, wealth building, investment planning, secure savings, finance app, money tracker">
   <link rel="canonical" href="https://lockyourmoney.online/" />
 
   <!-- OpenGraph / Social meta -->
@@ -36,7 +36,7 @@
   <meta name="twitter:title" content="Lock Your Money" />
   <meta name="twitter:description" content="Stop overspending. Lock your money and build better habits." />
   <meta name="twitter:image" content="https://lockyourmoney.online/images/preview.png" />
-  <meta name="twitter:site" content="@YourHandle" />
+  <meta name="twitter:site" content="@infin8erer" />
 
   <!-- Browser UI -->
   <meta name="theme-color" content="#000000" />
